Add existing file

--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Market Store</title>
 </head>
 <body>
 
@@ -25,22 +25,15 @@
         <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar7">
         <ul class="navbar-nav ml-auto flex-nowrap">
           <li class="nav-item active">
-            <a class="nav-link" href="Supermarket.html?getID=AllItems">Items</a>
+            <a class="nav-link" href="Home.html">Stores</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="Supermarket.html?getID=Vegetables">Vegetables</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="Supermarket.html?getID=Crockery">Crockery</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="Supermarket.html?getID=Meat">Meat</a>
-          </li>
+            <a class="nav-link" href="Home.html">Contact Us</a>
         </ul>
         </div>
       </nav>
     
-      <button type="button" class="btn btn-outline-primary" onclick="window.location.href='\Supermarket.html?getID=AllItems'">Start Shopping</button>
+      <button type="button" class="btn btn-primary" onclick="window.location.href='\Supermarket.html?getID=AllItems'">Start Shopping</button>
 
   <div class="footer">©2020 Copyright:
     <a href="Supermarket.html">Store4ICT.com</a>
